# texere

./: .gitignore  CMakeLists.txt  NEXTSTEP.md  README.md  gulpfile.js  package-lock.json  package.json  tests.js
lib/: crow_all.hpp
src/: entity_memory_storage.cpp  entity_memory_storage.hpp  http_wrapper.cpp  main.cpp  texere.hpp
src/lib/event/: EventBus.cpp  EventBus.hpp
src/schema_x/: response.json
src/server_x/: db.py  http_wrapper.cpp  main.py  models.py  requirements.txt  settings.py
src/server_x/migrations/models/: 0_20201117210643_init.json
src/ui_x/: TexereWindow.cpp  TexereWindow.h  main.cpp  main.qml  qml.qrc
src/ui_x/renderables/: blue.qml  main.qml  my_rectangle.qml  red.qml  test.qml
